# pyquante2

./: .gitignore  .pypirc.template  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  FUTURE_TASKS.md  LICENSE  MANIFEST.in  Makefile  README  README.md  TODO.md  VERSION_MANAGEMENT.md  pyproject.toml  setup.py  setup.py.save  test.out
.github/workflows/: CI.yaml
attic/julia/: README.md  pyquante.jl
attic/othertests/: H2 Dissociation.ipynb  He GVB.ipynb  int2e-speed-julia.ipynb  int2e-speed.ipynb  molplot.py  simen-n2.ipynb  simen-n2.py
conda-recipe/: meta.yaml
cython/: cbecke.c  cbecke.pyx  chgp.c  chgp.h  chgp.pxd  chgp_wrap.c  chgp_wrap.pyx  cints.c  cone.c  cone.pyx  cone_wrap.c  cone_wrap.pyx  crys.c  crys.h  crys_wrap.c  crys_wrap.pyx  ctwo.c  ctwo.pyx  ctwo_wrap.c  cutils.c  cutils.pyx  test_cython.py
docs/: Makefile  conf.py  index.rst
julia/: README.md  pyquante.jl  pyquante2.jl.ipynb
othertests/: H- GVB.ipynb  H2 Dissociation.ipynb  He GVB.ipynb  overview.ipynb  simen-n2.ipynb  simen-n2.py  time_ethane.py
pyquante2/: __init__.py  element.py  orbman.py  settings.py  utils.py
pyquante2/basis/: basisset.py  cgbf.py  data.py  pgbf.py  shell_basisset.py  tools.py
pyquante2/dft/: dft.py  functionals.py  reference.py
pyquante2/geo/: atom.py  elements.py  molecule.py  samples.py  zmatrix.py
pyquante2/graphics/: contourplot.py  lineplot.py  maya.py  vtk.py  vtkplot.py
pyquante2/grid/: atomic_grid.py  becke.py  grid.py  lebedev.py
pyquante2/hylleraas/: helios.py
pyquante2/ints/: README.md  hgp.py  hgp_shell.py  integrals.py  one.py  rys.py  shell_vrr_notes.txt  transform.py  two.py
pyquante2/io/: cml.py
pyquante2/pt/: mp2.py
pyquante2/scf/: hamiltonians.py  iterators.py  mcscf.py
pyquante2/tests/: other_test.py  test_all.py  test_one.py
pyquante2/viewer/: TBWindow.py  nwviewer.py  trackball_camera.py  utils.py  viewer.py
src/pyquante2/: __init__.py  constants.py  utils.py
src/pyquante2/basis/: cgbf.py  pgbf.py
src/pyquante2/cints/: Makefile.save  cbecke.c  chgp_wrap.c  cints.h  cints.pxd  cone_wrap.c  crys.h  crys.pxd  crys_wrap.c  crys_wrap.pyx  ctwo_wrap.c  ctwo_wrap.pyx
tests/: dft_plottest.py  gl.py  h2.py  plots.py  pyq1_comparison.py  scf_simple.py  test_all.py  test_basis_sets.py  test_cython.py  test_dft.py  test_mp2.py  test_one.py  test_scf.py  test_two.py  test_zmatrix.py
(+25 files in other folders)
