[build-system]
requires=["setuptools>74.1", "wheel", "numpy"]
build-backend="setuptools.build_meta"

[project]
name = "pyquante2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pip>=25.3",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]


