[build-system]
requires=["setuptools>74.1", "wheel", "numpy", "Cython"]
build-backend="setuptools.build_meta"

[project]
name = "pyquante2"
version = "0.1.0"
description = "Python quantum chemistry routines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
jupyter = ["ipykernel>=7.1.0"]
dev = ["pytest", "matplotlib", "build", "ipykernel"]
test = ["pytest", "matplotlib", "build"]

[tool.pytest.ini_options]
pythonpath = ["."]
